--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^6.3.2
   animated_text_kit: ^4.3.0
   url_launcher: ^6.3.2
+  flutter_animate: ^4.5.2
 
 
 dev_dependencies:
